--- a/sou/app/src/main/res/layout/activity_main.xml
+++ b/sou/app/src/main/res/layout/activity_main.xml
@@ -37,11 +37,22 @@
         android:id="@+id/takePicBtn"
         android:layout_width="60dp"
         android:layout_height="60dp"
-        android:layout_marginBottom="20dp"
-        android:layout_marginEnd="15dp"
+        android:layout_marginBottom="16dp"
+        android:layout_marginStart="16dp"
+        android:clickable="true"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:srcCompat="@drawable/ic_camera" />
+
+    <android.support.design.widget.FloatingActionButton
+        android:id="@+id/doneBtn"
+        android:layout_width="60dp"
+        android:layout_height="60dp"
+        android:layout_marginBottom="16dp"
+        android:layout_marginEnd="16dp"
         android:clickable="true"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:srcCompat="@drawable/ic_camera" />
+        app:srcCompat="@drawable/ic_check_black_24dp" />
 
 </android.support.constraint.ConstraintLayout>
